--- a/archives/toutiao-search/2024-04-09.md
+++ b/archives/toutiao-search/2024-04-09.md
@@ -1,59 +1,74 @@
 # 2024-04-09
 
-共 197 条
+共 209 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Apr 09 2024 13:00:57 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Tue Apr 09 2024 14:07:21 GMT+0800 (China Standard Time) -->
 1. [媒体人：朱婷地位比我们想的还要高](https://so.toutiao.com/search?keyword=媒体人：朱婷地位比我们想的还要高)
 1. [专家：耶伦访华实际是求中国买美债](https://so.toutiao.com/search?keyword=专家：耶伦访华实际是求中国买美债)
 1. [“文旅热”助力中国经济回升向好](https://so.toutiao.com/search?keyword=“文旅热”助力中国经济回升向好)
-1. [男子发现儿子玩游戏充值自扇耳光](https://so.toutiao.com/search?keyword=男子发现儿子玩游戏充值自扇耳光)
-1. [曝伊朗为“不报复以色列”开条件](https://so.toutiao.com/search?keyword=曝伊朗为“不报复以色列”开条件)
-1. [拉夫罗夫和耶伦都在中国释放啥信号](https://so.toutiao.com/search?keyword=拉夫罗夫和耶伦都在中国释放啥信号)
-1. [教育局回应学生被老师殴打跳楼去世](https://so.toutiao.com/search?keyword=教育局回应学生被老师殴打跳楼去世)
-1. [智己汽车向小米道歉](https://so.toutiao.com/search?keyword=智己汽车向小米道歉)
-1. [五一还放过七天假](https://so.toutiao.com/search?keyword=五一还放过七天假)
-1. [黄金大涨谁最受益](https://so.toutiao.com/search?keyword=黄金大涨谁最受益)
-1. [老人握着马英九的手说咱们祖国强大](https://so.toutiao.com/search?keyword=老人握着马英九的手说咱们祖国强大)
-1. [寸拳大师功夫奇龙遭上门打假](https://so.toutiao.com/search?keyword=寸拳大师功夫奇龙遭上门打假)
-1. [湖南永州网红浮桥被冲走？官方辟谣](https://so.toutiao.com/search?keyword=湖南永州网红浮桥被冲走？官方辟谣)
-1. [金价又新高囤金人却慌了](https://so.toutiao.com/search?keyword=金价又新高囤金人却慌了)
-1. [马英九夜游“鸟巢”“冰丝带”](https://so.toutiao.com/search?keyword=马英九夜游“鸟巢”“冰丝带”)
-1. [日全食上演 美国民众欢呼尖叫](https://so.toutiao.com/search?keyword=日全食上演+美国民众欢呼尖叫)
-1. [7000元苹果手机维修费竟要14000元](https://so.toutiao.com/search?keyword=7000元苹果手机维修费竟要14000元)
 1. [邱毅批马英九说错话](https://so.toutiao.com/search?keyword=邱毅批马英九说错话)
-1. [智己海报被质疑像素级模仿小米汽车](https://so.toutiao.com/search?keyword=智己海报被质疑像素级模仿小米汽车)
-1. [中俄外长在京协调立场](https://so.toutiao.com/search?keyword=中俄外长在京协调立场)
-1. [马英九：“去中国化”不会成功](https://so.toutiao.com/search?keyword=马英九：“去中国化”不会成功)
-1. [广西火灾遇难者是一家五口](https://so.toutiao.com/search?keyword=广西火灾遇难者是一家五口)
-1. [虐猫考生未被录取是“舆论胜利”吗](https://so.toutiao.com/search?keyword=虐猫考生未被录取是“舆论胜利”吗)
-1. [万达集团安全落地了吗](https://so.toutiao.com/search?keyword=万达集团安全落地了吗)
+1. [黄金大涨谁最受益](https://so.toutiao.com/search?keyword=黄金大涨谁最受益)
+1. [曝伊朗为“不报复以色列”开条件](https://so.toutiao.com/search?keyword=曝伊朗为“不报复以色列”开条件)
+1. [五一还放过七天假](https://so.toutiao.com/search?keyword=五一还放过七天假)
+1. [金价破700元 不少市民选择出手黄金](https://so.toutiao.com/search?keyword=金价破700元+不少市民选择出手黄金)
+1. [妻子照顾瘫痪丈夫6年被泼水后回泼](https://so.toutiao.com/search?keyword=妻子照顾瘫痪丈夫6年被泼水后回泼)
 1. [小米SU7二手车加价2.6万出售](https://so.toutiao.com/search?keyword=小米SU7二手车加价2.6万出售)
+1. [教育局回应学生被老师殴打跳楼去世](https://so.toutiao.com/search?keyword=教育局回应学生被老师殴打跳楼去世)
+1. [金价又新高囤金人却慌了](https://so.toutiao.com/search?keyword=金价又新高囤金人却慌了)
+1. [湖南永州网红浮桥被冲走？官方辟谣](https://so.toutiao.com/search?keyword=湖南永州网红浮桥被冲走？官方辟谣)
+1. [拉夫罗夫和耶伦都在中国释放啥信号](https://so.toutiao.com/search?keyword=拉夫罗夫和耶伦都在中国释放啥信号)
+1. [马英九在长城高唱《长城谣》](https://so.toutiao.com/search?keyword=马英九在长城高唱《长城谣》)
+1. [网友：执法人员与村妇仅仅是冲突吗](https://so.toutiao.com/search?keyword=网友：执法人员与村妇仅仅是冲突吗)
+1. [寸拳大师功夫奇龙遭上门打假](https://so.toutiao.com/search?keyword=寸拳大师功夫奇龙遭上门打假)
+1. [老人握着马英九的手说咱们祖国强大](https://so.toutiao.com/search?keyword=老人握着马英九的手说咱们祖国强大)
+1. [智己汽车向小米道歉](https://so.toutiao.com/search?keyword=智己汽车向小米道歉)
+1. [日全食上演 美国民众欢呼尖叫](https://so.toutiao.com/search?keyword=日全食上演+美国民众欢呼尖叫)
+1. [马英九夜游“鸟巢”“冰丝带”](https://so.toutiao.com/search?keyword=马英九夜游“鸟巢”“冰丝带”)
+1. [虐猫考生未被录取是“舆论胜利”吗](https://so.toutiao.com/search?keyword=虐猫考生未被录取是“舆论胜利”吗)
+1. [网友为提灯定损所在地五一旅游出招](https://so.toutiao.com/search?keyword=网友为提灯定损所在地五一旅游出招)
+1. [男子发现儿子玩游戏充值自扇耳光](https://so.toutiao.com/search?keyword=男子发现儿子玩游戏充值自扇耳光)
 1. [金价攀升很多人一袋一袋卖黄金](https://so.toutiao.com/search?keyword=金价攀升很多人一袋一袋卖黄金)
+1. [广西火灾遇难者是一家五口](https://so.toutiao.com/search?keyword=广西火灾遇难者是一家五口)
+1. [NCAA决赛：康大轻取普渡完成卫冕](https://so.toutiao.com/search?keyword=NCAA决赛：康大轻取普渡完成卫冕)
+1. [野猴进村伤人 当地已组建巡逻队](https://so.toutiao.com/search?keyword=野猴进村伤人+当地已组建巡逻队)
+1. [小米汽车回应是否可以涉水](https://so.toutiao.com/search?keyword=小米汽车回应是否可以涉水)
+1. [到期后退房 房东列清单要求赔7千多](https://so.toutiao.com/search?keyword=到期后退房+房东列清单要求赔7千多)
+1. [马英九：“去中国化”不会成功](https://so.toutiao.com/search?keyword=马英九：“去中国化”不会成功)
+1. [牛犇：一生演小角色的大演员](https://so.toutiao.com/search?keyword=牛犇：一生演小角色的大演员)
+1. [万达集团安全落地了吗](https://so.toutiao.com/search?keyword=万达集团安全落地了吗)
+1. [飞天茅台降价幅度加大](https://so.toutiao.com/search?keyword=飞天茅台降价幅度加大)
+1. [中俄外长在京协调立场](https://so.toutiao.com/search?keyword=中俄外长在京协调立场)
+1. [NCAA总决赛周志豪砍下37+10](https://so.toutiao.com/search?keyword=NCAA总决赛周志豪砍下37+10)
+1. [蓝营民代：赖任用何人都难逃烂摊子](https://so.toutiao.com/search?keyword=蓝营民代：赖任用何人都难逃烂摊子)
+1. [胖豹走红后动物园月收入超去年全年](https://so.toutiao.com/search?keyword=胖豹走红后动物园月收入超去年全年)
+1. [女子称抱着骨灰盒时服务员来推销](https://so.toutiao.com/search?keyword=女子称抱着骨灰盒时服务员来推销)
+1. [K小姐不满等不到黄子佼道歉](https://so.toutiao.com/search?keyword=K小姐不满等不到黄子佼道歉)
+1. [日本家电在中国市场不吃香了吗](https://so.toutiao.com/search?keyword=日本家电在中国市场不吃香了吗)
+1. [杨紫《承欢记》开播](https://so.toutiao.com/search?keyword=杨紫《承欢记》开播)
+1. [海能达回应每天罚款100万美元](https://so.toutiao.com/search?keyword=海能达回应每天罚款100万美元)
+1. [北京大兴机场海关查获57瓶寄生虫](https://so.toutiao.com/search?keyword=北京大兴机场海关查获57瓶寄生虫)
+1. [菲律宾南海政策为何“改弦更张”](https://so.toutiao.com/search?keyword=菲律宾南海政策为何“改弦更张”)
+1. [智己海报被质疑像素级模仿小米汽车](https://so.toutiao.com/search?keyword=智己海报被质疑像素级模仿小米汽车)
 1. [俄军新型无人扫雷车清除乌军雷场](https://so.toutiao.com/search?keyword=俄军新型无人扫雷车清除乌军雷场)
+1. [新疆小朋友骑马炫技](https://so.toutiao.com/search?keyword=新疆小朋友骑马炫技)
+1. [重庆解放碑民警闹市区几秒抓逃犯](https://so.toutiao.com/search?keyword=重庆解放碑民警闹市区几秒抓逃犯)
+1. [专家：不建议购买黄金饰品投资](https://so.toutiao.com/search?keyword=专家：不建议购买黄金饰品投资)
+1. [7000元苹果手机维修费竟要14000元](https://so.toutiao.com/search?keyword=7000元苹果手机维修费竟要14000元)
 1. [初中生遇害案疑犯父母或涉嫌包庇罪](https://so.toutiao.com/search?keyword=初中生遇害案疑犯父母或涉嫌包庇罪)
 1. [台陆委会主委自认520后将去职](https://so.toutiao.com/search?keyword=台陆委会主委自认520后将去职)
 1. [美向伊朗喊话：别袭击美军](https://so.toutiao.com/search?keyword=美向伊朗喊话：别袭击美军)
-1. [飞天茅台降价幅度加大](https://so.toutiao.com/search?keyword=飞天茅台降价幅度加大)
-1. [网友为提灯定损所在地五一旅游出招](https://so.toutiao.com/search?keyword=网友为提灯定损所在地五一旅游出招)
-1. [牛犇：一生演小角色的大演员](https://so.toutiao.com/search?keyword=牛犇：一生演小角色的大演员)
 1. [12岁小学生800米跑出2分21秒](https://so.toutiao.com/search?keyword=12岁小学生800米跑出2分21秒)
 1. [C罗肘击染红后朝裁判举拳头](https://so.toutiao.com/search?keyword=C罗肘击染红后朝裁判举拳头)
-1. [海能达回应每天罚款100万美元](https://so.toutiao.com/search?keyword=海能达回应每天罚款100万美元)
-1. [胖豹走红后动物园月收入超去年全年](https://so.toutiao.com/search?keyword=胖豹走红后动物园月收入超去年全年)
-1. [小米汽车回应是否可以涉水](https://so.toutiao.com/search?keyword=小米汽车回应是否可以涉水)
 1. [浙江东阳现“提灯定损”：双方和解](https://so.toutiao.com/search?keyword=浙江东阳现“提灯定损”：双方和解)
 1. [北京市委书记尹力会见马英九一行](https://so.toutiao.com/search?keyword=北京市委书记尹力会见马英九一行)
 1. [美国管制对华半导体出口 韩媒诉苦](https://so.toutiao.com/search?keyword=美国管制对华半导体出口+韩媒诉苦)
 1. [胡锡进希望社会给虐猫考生其他通道](https://so.toutiao.com/search?keyword=胡锡进希望社会给虐猫考生其他通道)
-1. [菲律宾南海政策为何“改弦更张”](https://so.toutiao.com/search?keyword=菲律宾南海政策为何“改弦更张”)
 1. [大V：美禁售海能达不只是商业纠纷](https://so.toutiao.com/search?keyword=大V：美禁售海能达不只是商业纠纷)
 1. [中金：下调美联储降息预测](https://so.toutiao.com/search?keyword=中金：下调美联储降息预测)
 1. [以总理称以军进攻拉法已有时间安排](https://so.toutiao.com/search?keyword=以总理称以军进攻拉法已有时间安排)
 1. [姚明为第二届诸暨村BA远程打call](https://so.toutiao.com/search?keyword=姚明为第二届诸暨村BA远程打call)
 1. [环卫工向小院子扔垃圾一包接一包](https://so.toutiao.com/search?keyword=环卫工向小院子扔垃圾一包接一包)
-1. [妻子照顾瘫痪丈夫6年被泼水后回泼](https://so.toutiao.com/search?keyword=妻子照顾瘫痪丈夫6年被泼水后回泼)
-1. [专家：不建议购买黄金饰品投资](https://so.toutiao.com/search?keyword=专家：不建议购买黄金饰品投资)
 1. [男子打人拒付医疗费被法院腾房拍卖](https://so.toutiao.com/search?keyword=男子打人拒付医疗费被法院腾房拍卖)
 1. [Zara2个月连关9家店 粉丝紧急扫货](https://so.toutiao.com/search?keyword=Zara2个月连关9家店+粉丝紧急扫货)
 1. [古代媒婆与现代“王婆”有何不同](https://so.toutiao.com/search?keyword=古代媒婆与现代“王婆”有何不同)
@@ -61,10 +76,8 @@
 1. [虐猫考生未在兰大拟录取名单](https://so.toutiao.com/search?keyword=虐猫考生未在兰大拟录取名单)
 1. [13日起北方大部有大风降温降水天气](https://so.toutiao.com/search?keyword=13日起北方大部有大风降温降水天气)
 1. [10日夜间起南方将有新一轮较强降水](https://so.toutiao.com/search?keyword=10日夜间起南方将有新一轮较强降水)
-1. [女子称抱着骨灰盒时服务员来推销](https://so.toutiao.com/search?keyword=女子称抱着骨灰盒时服务员来推销)
 1. [伊朗在全国范围部署地对空导弹](https://so.toutiao.com/search?keyword=伊朗在全国范围部署地对空导弹)
 1. [首饰金与回收金克价差近200元](https://so.toutiao.com/search?keyword=首饰金与回收金克价差近200元)
-1. [重庆解放碑民警闹市区几秒抓逃犯](https://so.toutiao.com/search?keyword=重庆解放碑民警闹市区几秒抓逃犯)
 1. [金价暴涨房价下跌说明了什么](https://so.toutiao.com/search?keyword=金价暴涨房价下跌说明了什么)
 1. [内蒙古有学生打群架？警方回应](https://so.toutiao.com/search?keyword=内蒙古有学生打群架？警方回应)
 1. [Zara回应撤出中国传闻](https://so.toutiao.com/search?keyword=Zara回应撤出中国传闻)
@@ -83,7 +96,6 @@
 1. [专家：菲律宾找美国撑腰反被当棋子](https://so.toutiao.com/search?keyword=专家：菲律宾找美国撑腰反被当棋子)
 1. [网友吐槽五一调休：放不起就别放了](https://so.toutiao.com/search?keyword=网友吐槽五一调休：放不起就别放了)
 1. [河南平顶山多名执法人员与村民冲突](https://so.toutiao.com/search?keyword=河南平顶山多名执法人员与村民冲突)
-1. [新疆小朋友骑马炫技](https://so.toutiao.com/search?keyword=新疆小朋友骑马炫技)
 1. [安理会讨论接纳巴为联合国正式成员](https://so.toutiao.com/search?keyword=安理会讨论接纳巴为联合国正式成员)
 1. [以军称以色列北部遭15枚火箭弹袭击](https://so.toutiao.com/search?keyword=以军称以色列北部遭15枚火箭弹袭击)
 1. [财政部：耶伦访华与中国达成2点新共识](https://so.toutiao.com/search?keyword=财政部：耶伦访华与中国达成2点新共识)
