--- a/archives/toutiao-search/2024-04-09.md
+++ b/archives/toutiao-search/2024-04-09.md
@@ -1,58 +1,79 @@
 # 2024-04-09
 
-共 243 条
+共 264 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Apr 09 2024 16:00:39 GMT+0800 (China Standard Time) -->
-1. [媒体人：朱婷地位比我们想的还要高](https://so.toutiao.com/search?keyword=媒体人：朱婷地位比我们想的还要高)
-1. [教育局回应学生被老师殴打跳楼去世](https://so.toutiao.com/search?keyword=教育局回应学生被老师殴打跳楼去世)
-1. [“文旅热”助力中国经济回升向好](https://so.toutiao.com/search?keyword=“文旅热”助力中国经济回升向好)
+<!-- 最后更新时间 Tue Apr 09 2024 17:01:00 GMT+0800 (China Standard Time) -->
 1. [五一法定节假日是1天](https://so.toutiao.com/search?keyword=五一法定节假日是1天)
+1. [教育局回应学生被老师殴打跳楼去世](https://so.toutiao.com/search?keyword=教育局回应学生被老师殴打跳楼去世)
+1. [轨道上的长三角在“提速”](https://so.toutiao.com/search?keyword=轨道上的长三角在“提速”)
+1. [拉夫罗夫耶伦马英九8日同在北京](https://so.toutiao.com/search?keyword=拉夫罗夫耶伦马英九8日同在北京)
+1. [岳婿双行长的问题出在哪](https://so.toutiao.com/search?keyword=岳婿双行长的问题出在哪)
 1. [曝伊朗为“不报复以色列”开条件](https://so.toutiao.com/search?keyword=曝伊朗为“不报复以色列”开条件)
-1. [耶伦担忧中国拉低成本遭讽](https://so.toutiao.com/search?keyword=耶伦担忧中国拉低成本遭讽)
-1. [五一还放过七天假](https://so.toutiao.com/search?keyword=五一还放过七天假)
-1. [韩媒：C罗本性难移](https://so.toutiao.com/search?keyword=韩媒：C罗本性难移)
-1. [岳婿双行长三代烟草人的问题出在哪](https://so.toutiao.com/search?keyword=岳婿双行长三代烟草人的问题出在哪)
-1. [60岁农民工讨生活练就一身肌肉](https://so.toutiao.com/search?keyword=60岁农民工讨生活练就一身肌肉)
-1. [金价破700元 不少市民选择出手黄金](https://so.toutiao.com/search?keyword=金价破700元+不少市民选择出手黄金)
+1. [媒体人：朱婷地位比我们想的还要高](https://so.toutiao.com/search?keyword=媒体人：朱婷地位比我们想的还要高)
 1. [淘宝买到假茅台官方拒绝10倍赔偿](https://so.toutiao.com/search?keyword=淘宝买到假茅台官方拒绝10倍赔偿)
-1. [湖南永州网红浮桥被冲走？官方辟谣](https://so.toutiao.com/search?keyword=湖南永州网红浮桥被冲走？官方辟谣)
-1. [黄金大涨谁最受益](https://so.toutiao.com/search?keyword=黄金大涨谁最受益)
-1. [90后姑娘辞职去摆摊 最高月入近9万](https://so.toutiao.com/search?keyword=90后姑娘辞职去摆摊+最高月入近9万)
-1. [马英九在长城高唱《长城谣》](https://so.toutiao.com/search?keyword=马英九在长城高唱《长城谣》)
-1. [小伙被义乌国际商贸城的物价震撼到](https://so.toutiao.com/search?keyword=小伙被义乌国际商贸城的物价震撼到)
-1. [美居民：普京比拜登更胜任美国总统](https://so.toutiao.com/search?keyword=美居民：普京比拜登更胜任美国总统)
-1. [房东拒退押金称是行规后续：已退款](https://so.toutiao.com/search?keyword=房东拒退押金称是行规后续：已退款)
-1. [男子发现儿子玩游戏充值自扇耳光](https://so.toutiao.com/search?keyword=男子发现儿子玩游戏充值自扇耳光)
+1. [五一还放过七天假](https://so.toutiao.com/search?keyword=五一还放过七天假)
+1. [支付宝崩了后已恢复正常](https://so.toutiao.com/search?keyword=支付宝崩了后已恢复正常)
 1. [专家谈养老金：领钱的多交钱的少](https://so.toutiao.com/search?keyword=专家谈养老金：领钱的多交钱的少)
-1. [耶伦透露访华成果](https://so.toutiao.com/search?keyword=耶伦透露访华成果)
+1. [金价破700元 不少市民选择出手黄金](https://so.toutiao.com/search?keyword=金价破700元+不少市民选择出手黄金)
+1. [湖南永州网红浮桥被冲走？官方辟谣](https://so.toutiao.com/search?keyword=湖南永州网红浮桥被冲走？官方辟谣)
+1. [华为Mate 70系列最新曝光](https://so.toutiao.com/search?keyword=华为Mate+70系列最新曝光)
+1. [黄金大涨谁最受益](https://so.toutiao.com/search?keyword=黄金大涨谁最受益)
+1. [曝南昌一教授房东扣租客300元押金](https://so.toutiao.com/search?keyword=曝南昌一教授房东扣租客300元押金)
+1. [丈夫被肥料掩埋 妻子拦执法车求助](https://so.toutiao.com/search?keyword=丈夫被肥料掩埋+妻子拦执法车求助)
+1. [马英九在长城高唱《长城谣》](https://so.toutiao.com/search?keyword=马英九在长城高唱《长城谣》)
+1. [俄媒谈中国推动以旧换新：前所未有](https://so.toutiao.com/search?keyword=俄媒谈中国推动以旧换新：前所未有)
+1. [曝华为门店订鲜花送给P70首批用户](https://so.toutiao.com/search?keyword=曝华为门店订鲜花送给P70首批用户)
 1. [央视评三名初中生涉嫌杀害同学](https://so.toutiao.com/search?keyword=央视评三名初中生涉嫌杀害同学)
+1. [耶伦透露访华成果](https://so.toutiao.com/search?keyword=耶伦透露访华成果)
+1. [俄称用战术导弹摧毁乌无人机仓库](https://so.toutiao.com/search?keyword=俄称用战术导弹摧毁乌无人机仓库)
+1. [医药卫健系统近期多人被查](https://so.toutiao.com/search?keyword=医药卫健系统近期多人被查)
+1. [赵乐际将对朝鲜进行友好访问](https://so.toutiao.com/search?keyword=赵乐际将对朝鲜进行友好访问)
+1. [专家：金价飙升反映纸币信用的缺失](https://so.toutiao.com/search?keyword=专家：金价飙升反映纸币信用的缺失)
+1. [美居民：普京比拜登更胜任美国总统](https://so.toutiao.com/search?keyword=美居民：普京比拜登更胜任美国总统)
+1. [华为P70或突袭上架](https://so.toutiao.com/search?keyword=华为P70或突袭上架)
+1. [韩媒：C罗本性难移](https://so.toutiao.com/search?keyword=韩媒：C罗本性难移)
+1. [男子发现儿子玩游戏充值自扇耳光](https://so.toutiao.com/search?keyword=男子发现儿子玩游戏充值自扇耳光)
+1. [7000元苹果手机维修费竟要14000元](https://so.toutiao.com/search?keyword=7000元苹果手机维修费竟要14000元)
+1. [不满韩国瑜太中立？陈玉珍回应](https://so.toutiao.com/search?keyword=不满韩国瑜太中立？陈玉珍回应)
+1. [90后姑娘辞职去摆摊 最高月入近9万](https://so.toutiao.com/search?keyword=90后姑娘辞职去摆摊+最高月入近9万)
+1. [开封王婆“变身”穆桂英](https://so.toutiao.com/search?keyword=开封王婆“变身”穆桂英)
+1. [智己“碰瓷”小米 赢了还是输了](https://so.toutiao.com/search?keyword=智己“碰瓷”小米+赢了还是输了)
+1. [伊朗称未来几天对以方来说非常困难](https://so.toutiao.com/search?keyword=伊朗称未来几天对以方来说非常困难)
+1. [网易暴雪10日官宣合作](https://so.toutiao.com/search?keyword=网易暴雪10日官宣合作)
+1. [韩国医生“辞职潮”风波持续](https://so.toutiao.com/search?keyword=韩国医生“辞职潮”风波持续)
+1. [女子停车堵消防通道称老公是大律师](https://so.toutiao.com/search?keyword=女子停车堵消防通道称老公是大律师)
+1. [大V：C919基本跟波音空客没啥分别](https://so.toutiao.com/search?keyword=大V：C919基本跟波音空客没啥分别)
+1. [60岁农民工讨生活练就一身肌肉](https://so.toutiao.com/search?keyword=60岁农民工讨生活练就一身肌肉)
+1. [湖南长沙中院原院长肖新平被查](https://so.toutiao.com/search?keyword=湖南长沙中院原院长肖新平被查)
+1. [曝《庆余年2》5月定档](https://so.toutiao.com/search?keyword=曝《庆余年2》5月定档)
+1. [金价攀升很多人一袋一袋卖黄金](https://so.toutiao.com/search?keyword=金价攀升很多人一袋一袋卖黄金)
+1. [广西火灾遇难者是一家五口](https://so.toutiao.com/search?keyword=广西火灾遇难者是一家五口)
+1. [电影《海关战线》定档7月5日](https://so.toutiao.com/search?keyword=电影《海关战线》定档7月5日)
+1. [金价又新高囤金人却慌了](https://so.toutiao.com/search?keyword=金价又新高囤金人却慌了)
+1. [俄军无人机投弹摧毁乌军所躲房屋](https://so.toutiao.com/search?keyword=俄军无人机投弹摧毁乌军所躲房屋)
+1. [孙颖莎国际乒联世界排名第一7800分](https://so.toutiao.com/search?keyword=孙颖莎国际乒联世界排名第一7800分)
+1. [王婆说媒现场保安下跪向游客道歉](https://so.toutiao.com/search?keyword=王婆说媒现场保安下跪向游客道歉)
+1. [“文旅热”助力中国经济回升向好](https://so.toutiao.com/search?keyword=“文旅热”助力中国经济回升向好)
+1. [耶伦担忧中国拉低成本遭讽](https://so.toutiao.com/search?keyword=耶伦担忧中国拉低成本遭讽)
+1. [岳婿双行长三代烟草人的问题出在哪](https://so.toutiao.com/search?keyword=岳婿双行长三代烟草人的问题出在哪)
+1. [小伙被义乌国际商贸城的物价震撼到](https://so.toutiao.com/search?keyword=小伙被义乌国际商贸城的物价震撼到)
+1. [房东拒退押金称是行规后续：已退款](https://so.toutiao.com/search?keyword=房东拒退押金称是行规后续：已退款)
 1. [女子称抱着骨灰盒时服务员来推销](https://so.toutiao.com/search?keyword=女子称抱着骨灰盒时服务员来推销)
 1. [妻子照顾瘫痪丈夫6年被泼水后回泼](https://so.toutiao.com/search?keyword=妻子照顾瘫痪丈夫6年被泼水后回泼)
 1. [台媒体验大陆高铁](https://so.toutiao.com/search?keyword=台媒体验大陆高铁)
 1. [牛犇：一生演小角色的大演员](https://so.toutiao.com/search?keyword=牛犇：一生演小角色的大演员)
-1. [医药卫健系统近期多人被查](https://so.toutiao.com/search?keyword=医药卫健系统近期多人被查)
-1. [专家：金价飙升反映纸币信用的缺失](https://so.toutiao.com/search?keyword=专家：金价飙升反映纸币信用的缺失)
-1. [开封王婆“变身”穆桂英](https://so.toutiao.com/search?keyword=开封王婆“变身”穆桂英)
 1. [老人握着马英九的手说咱们祖国强大](https://so.toutiao.com/search?keyword=老人握着马英九的手说咱们祖国强大)
-1. [金价攀升很多人一袋一袋卖黄金](https://so.toutiao.com/search?keyword=金价攀升很多人一袋一袋卖黄金)
-1. [7000元苹果手机维修费竟要14000元](https://so.toutiao.com/search?keyword=7000元苹果手机维修费竟要14000元)
 1. [智己汽车向小米道歉](https://so.toutiao.com/search?keyword=智己汽车向小米道歉)
-1. [大V：C919基本跟波音空客没啥分别](https://so.toutiao.com/search?keyword=大V：C919基本跟波音空客没啥分别)
-1. [金价又新高囤金人却慌了](https://so.toutiao.com/search?keyword=金价又新高囤金人却慌了)
 1. [寸拳大师功夫奇龙遭上门打假](https://so.toutiao.com/search?keyword=寸拳大师功夫奇龙遭上门打假)
-1. [支付宝崩了后已恢复正常](https://so.toutiao.com/search?keyword=支付宝崩了后已恢复正常)
-1. [广西火灾遇难者是一家五口](https://so.toutiao.com/search?keyword=广西火灾遇难者是一家五口)
 1. [俄方称乌克兰加入北约绝对不可接受](https://so.toutiao.com/search?keyword=俄方称乌克兰加入北约绝对不可接受)
 1. [网友称建行拒绝回收卖出去的黄金](https://so.toutiao.com/search?keyword=网友称建行拒绝回收卖出去的黄金)
 1. [我国天文摄影师拍到日全食全过程](https://so.toutiao.com/search?keyword=我国天文摄影师拍到日全食全过程)
 1. [小米汽车回应是否可以涉水](https://so.toutiao.com/search?keyword=小米汽车回应是否可以涉水)
-1. [曝南昌一教授房东扣租客300元押金](https://so.toutiao.com/search?keyword=曝南昌一教授房东扣租客300元押金)
 1. [范世錡张艺凡恋情疑曝光](https://so.toutiao.com/search?keyword=范世錡张艺凡恋情疑曝光)
 1. [智己刘涛回应李斌：固态电池非作秀](https://so.toutiao.com/search?keyword=智己刘涛回应李斌：固态电池非作秀)
 1. [网友：执法人员与村妇仅仅是冲突吗](https://so.toutiao.com/search?keyword=网友：执法人员与村妇仅仅是冲突吗)
 1. [马英九夜游“鸟巢”“冰丝带”](https://so.toutiao.com/search?keyword=马英九夜游“鸟巢”“冰丝带”)
-1. [女子停车堵消防通道称老公是大律师](https://so.toutiao.com/search?keyword=女子停车堵消防通道称老公是大律师)
 1. [广西一张707万元彩票没人领](https://so.toutiao.com/search?keyword=广西一张707万元彩票没人领)
 1. [拉夫罗夫和耶伦都在中国释放啥信号](https://so.toutiao.com/search?keyword=拉夫罗夫和耶伦都在中国释放啥信号)
 1. [女子国外旅游遇搭讪险些被抢手机](https://so.toutiao.com/search?keyword=女子国外旅游遇搭讪险些被抢手机)
