--- a/archives/toutiao-search/2024-04-09.md
+++ b/archives/toutiao-search/2024-04-09.md
@@ -1,53 +1,73 @@
 # 2024-04-09
 
-共 264 条
+共 278 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Apr 09 2024 17:01:00 GMT+0800 (China Standard Time) -->
-1. [五一法定节假日是1天](https://so.toutiao.com/search?keyword=五一法定节假日是1天)
+<!-- 最后更新时间 Tue Apr 09 2024 18:00:50 GMT+0800 (China Standard Time) -->
 1. [教育局回应学生被老师殴打跳楼去世](https://so.toutiao.com/search?keyword=教育局回应学生被老师殴打跳楼去世)
+1. [五一法定节假日是1天](https://so.toutiao.com/search?keyword=五一法定节假日是1天)
 1. [轨道上的长三角在“提速”](https://so.toutiao.com/search?keyword=轨道上的长三角在“提速”)
-1. [拉夫罗夫耶伦马英九8日同在北京](https://so.toutiao.com/search?keyword=拉夫罗夫耶伦马英九8日同在北京)
-1. [岳婿双行长的问题出在哪](https://so.toutiao.com/search?keyword=岳婿双行长的问题出在哪)
-1. [曝伊朗为“不报复以色列”开条件](https://so.toutiao.com/search?keyword=曝伊朗为“不报复以色列”开条件)
-1. [媒体人：朱婷地位比我们想的还要高](https://so.toutiao.com/search?keyword=媒体人：朱婷地位比我们想的还要高)
+1. [金价飙涨引发多米诺效应](https://so.toutiao.com/search?keyword=金价飙涨引发多米诺效应)
+1. [华为P70或突袭上架](https://so.toutiao.com/search?keyword=华为P70或突袭上架)
 1. [淘宝买到假茅台官方拒绝10倍赔偿](https://so.toutiao.com/search?keyword=淘宝买到假茅台官方拒绝10倍赔偿)
-1. [五一还放过七天假](https://so.toutiao.com/search?keyword=五一还放过七天假)
-1. [支付宝崩了后已恢复正常](https://so.toutiao.com/search?keyword=支付宝崩了后已恢复正常)
+1. [曝伊朗为“不报复以色列”开条件](https://so.toutiao.com/search?keyword=曝伊朗为“不报复以色列”开条件)
+1. [男子翻墙入校砍伤3名老师 警方通报](https://so.toutiao.com/search?keyword=男子翻墙入校砍伤3名老师+警方通报)
+1. [华为Mate 70系列最新曝光](https://so.toutiao.com/search?keyword=华为Mate+70系列最新曝光)
+1. [媒体人：朱婷地位比我们想的还要高](https://so.toutiao.com/search?keyword=媒体人：朱婷地位比我们想的还要高)
 1. [专家谈养老金：领钱的多交钱的少](https://so.toutiao.com/search?keyword=专家谈养老金：领钱的多交钱的少)
 1. [金价破700元 不少市民选择出手黄金](https://so.toutiao.com/search?keyword=金价破700元+不少市民选择出手黄金)
 1. [湖南永州网红浮桥被冲走？官方辟谣](https://so.toutiao.com/search?keyword=湖南永州网红浮桥被冲走？官方辟谣)
-1. [华为Mate 70系列最新曝光](https://so.toutiao.com/search?keyword=华为Mate+70系列最新曝光)
-1. [黄金大涨谁最受益](https://so.toutiao.com/search?keyword=黄金大涨谁最受益)
-1. [曝南昌一教授房东扣租客300元押金](https://so.toutiao.com/search?keyword=曝南昌一教授房东扣租客300元押金)
-1. [丈夫被肥料掩埋 妻子拦执法车求助](https://so.toutiao.com/search?keyword=丈夫被肥料掩埋+妻子拦执法车求助)
-1. [马英九在长城高唱《长城谣》](https://so.toutiao.com/search?keyword=马英九在长城高唱《长城谣》)
 1. [俄媒谈中国推动以旧换新：前所未有](https://so.toutiao.com/search?keyword=俄媒谈中国推动以旧换新：前所未有)
-1. [曝华为门店订鲜花送给P70首批用户](https://so.toutiao.com/search?keyword=曝华为门店订鲜花送给P70首批用户)
+1. [黄金大涨谁最受益](https://so.toutiao.com/search?keyword=黄金大涨谁最受益)
+1. [岳婿双行长的问题出在哪](https://so.toutiao.com/search?keyword=岳婿双行长的问题出在哪)
+1. [7000元苹果手机维修费竟要14000元](https://so.toutiao.com/search?keyword=7000元苹果手机维修费竟要14000元)
+1. [曝南昌一教授房东扣租客300元押金](https://so.toutiao.com/search?keyword=曝南昌一教授房东扣租客300元押金)
+1. [办宴席须报备是进步还是权力越界](https://so.toutiao.com/search?keyword=办宴席须报备是进步还是权力越界)
+1. [五一还放过七天假](https://so.toutiao.com/search?keyword=五一还放过七天假)
 1. [央视评三名初中生涉嫌杀害同学](https://so.toutiao.com/search?keyword=央视评三名初中生涉嫌杀害同学)
 1. [耶伦透露访华成果](https://so.toutiao.com/search?keyword=耶伦透露访华成果)
+1. [男子发现儿子玩游戏充值自扇耳光](https://so.toutiao.com/search?keyword=男子发现儿子玩游戏充值自扇耳光)
+1. [香港海关查获146公斤走私黄金](https://so.toutiao.com/search?keyword=香港海关查获146公斤走私黄金)
+1. [拉夫罗夫耶伦马英九8日同在北京](https://so.toutiao.com/search?keyword=拉夫罗夫耶伦马英九8日同在北京)
+1. [曝《庆余年2》5月定档](https://so.toutiao.com/search?keyword=曝《庆余年2》5月定档)
+1. [90后姑娘辞职去摆摊 最高月入近9万](https://so.toutiao.com/search?keyword=90后姑娘辞职去摆摊+最高月入近9万)
+1. [俄远东发现放射源城市解除紧急状态](https://so.toutiao.com/search?keyword=俄远东发现放射源城市解除紧急状态)
+1. [曝华为门店订鲜花送给P70首批用户](https://so.toutiao.com/search?keyword=曝华为门店订鲜花送给P70首批用户)
+1. [专家：金价飙升反映纸币信用的缺失](https://so.toutiao.com/search?keyword=专家：金价飙升反映纸币信用的缺失)
+1. [智己：无意挑战小米的泼天流量](https://so.toutiao.com/search?keyword=智己：无意挑战小米的泼天流量)
+1. [支付宝崩了后已恢复正常](https://so.toutiao.com/search?keyword=支付宝崩了后已恢复正常)
+1. [飞天茅台批发价下探至2510元/瓶](https://so.toutiao.com/search?keyword=飞天茅台批发价下探至2510元/瓶)
+1. [“百元机”努比亚小牛发布](https://so.toutiao.com/search?keyword=“百元机”努比亚小牛发布)
+1. [媒体：朱婷回归中国女排皆大欢喜](https://so.toutiao.com/search?keyword=媒体：朱婷回归中国女排皆大欢喜)
+1. [骑车穿行“成都迪士尼”被拦](https://so.toutiao.com/search?keyword=骑车穿行“成都迪士尼”被拦)
+1. [女子称抱着骨灰盒时服务员来推销](https://so.toutiao.com/search?keyword=女子称抱着骨灰盒时服务员来推销)
+1. [俄外长：俄中关系达到前所未有水平](https://so.toutiao.com/search?keyword=俄外长：俄中关系达到前所未有水平)
+1. [伊朗称未来几天对以方来说非常困难](https://so.toutiao.com/search?keyword=伊朗称未来几天对以方来说非常困难)
+1. [网红一笑倾城自曝患癌已出院](https://so.toutiao.com/search?keyword=网红一笑倾城自曝患癌已出院)
+1. [金价攀升很多人一袋一袋卖黄金](https://so.toutiao.com/search?keyword=金价攀升很多人一袋一袋卖黄金)
+1. [谢龙介接国民党台南市党部主委](https://so.toutiao.com/search?keyword=谢龙介接国民党台南市党部主委)
+1. [中俄外长在京协调立场](https://so.toutiao.com/search?keyword=中俄外长在京协调立场)
+1. [黄磊首谈儿子](https://so.toutiao.com/search?keyword=黄磊首谈儿子)
+1. [媒体：自扇耳光的教育是“独角戏”](https://so.toutiao.com/search?keyword=媒体：自扇耳光的教育是“独角戏”)
+1. [网友：执法人员与村妇仅仅是冲突吗](https://so.toutiao.com/search?keyword=网友：执法人员与村妇仅仅是冲突吗)
+1. [浙江东阳现“提灯定损”：双方和解](https://so.toutiao.com/search?keyword=浙江东阳现“提灯定损”：双方和解)
+1. [12岁小学生800米跑出2分21秒](https://so.toutiao.com/search?keyword=12岁小学生800米跑出2分21秒)
+1. [韩媒：C罗本性难移](https://so.toutiao.com/search?keyword=韩媒：C罗本性难移)
+1. [不满韩国瑜太中立？陈玉珍回应](https://so.toutiao.com/search?keyword=不满韩国瑜太中立？陈玉珍回应)
+1. [丈夫被肥料掩埋 妻子拦执法车求助](https://so.toutiao.com/search?keyword=丈夫被肥料掩埋+妻子拦执法车求助)
+1. [马英九在长城高唱《长城谣》](https://so.toutiao.com/search?keyword=马英九在长城高唱《长城谣》)
 1. [俄称用战术导弹摧毁乌无人机仓库](https://so.toutiao.com/search?keyword=俄称用战术导弹摧毁乌无人机仓库)
 1. [医药卫健系统近期多人被查](https://so.toutiao.com/search?keyword=医药卫健系统近期多人被查)
 1. [赵乐际将对朝鲜进行友好访问](https://so.toutiao.com/search?keyword=赵乐际将对朝鲜进行友好访问)
-1. [专家：金价飙升反映纸币信用的缺失](https://so.toutiao.com/search?keyword=专家：金价飙升反映纸币信用的缺失)
 1. [美居民：普京比拜登更胜任美国总统](https://so.toutiao.com/search?keyword=美居民：普京比拜登更胜任美国总统)
-1. [华为P70或突袭上架](https://so.toutiao.com/search?keyword=华为P70或突袭上架)
-1. [韩媒：C罗本性难移](https://so.toutiao.com/search?keyword=韩媒：C罗本性难移)
-1. [男子发现儿子玩游戏充值自扇耳光](https://so.toutiao.com/search?keyword=男子发现儿子玩游戏充值自扇耳光)
-1. [7000元苹果手机维修费竟要14000元](https://so.toutiao.com/search?keyword=7000元苹果手机维修费竟要14000元)
-1. [不满韩国瑜太中立？陈玉珍回应](https://so.toutiao.com/search?keyword=不满韩国瑜太中立？陈玉珍回应)
-1. [90后姑娘辞职去摆摊 最高月入近9万](https://so.toutiao.com/search?keyword=90后姑娘辞职去摆摊+最高月入近9万)
 1. [开封王婆“变身”穆桂英](https://so.toutiao.com/search?keyword=开封王婆“变身”穆桂英)
 1. [智己“碰瓷”小米 赢了还是输了](https://so.toutiao.com/search?keyword=智己“碰瓷”小米+赢了还是输了)
-1. [伊朗称未来几天对以方来说非常困难](https://so.toutiao.com/search?keyword=伊朗称未来几天对以方来说非常困难)
 1. [网易暴雪10日官宣合作](https://so.toutiao.com/search?keyword=网易暴雪10日官宣合作)
 1. [韩国医生“辞职潮”风波持续](https://so.toutiao.com/search?keyword=韩国医生“辞职潮”风波持续)
 1. [女子停车堵消防通道称老公是大律师](https://so.toutiao.com/search?keyword=女子停车堵消防通道称老公是大律师)
 1. [大V：C919基本跟波音空客没啥分别](https://so.toutiao.com/search?keyword=大V：C919基本跟波音空客没啥分别)
 1. [60岁农民工讨生活练就一身肌肉](https://so.toutiao.com/search?keyword=60岁农民工讨生活练就一身肌肉)
 1. [湖南长沙中院原院长肖新平被查](https://so.toutiao.com/search?keyword=湖南长沙中院原院长肖新平被查)
-1. [曝《庆余年2》5月定档](https://so.toutiao.com/search?keyword=曝《庆余年2》5月定档)
-1. [金价攀升很多人一袋一袋卖黄金](https://so.toutiao.com/search?keyword=金价攀升很多人一袋一袋卖黄金)
 1. [广西火灾遇难者是一家五口](https://so.toutiao.com/search?keyword=广西火灾遇难者是一家五口)
 1. [电影《海关战线》定档7月5日](https://so.toutiao.com/search?keyword=电影《海关战线》定档7月5日)
 1. [金价又新高囤金人却慌了](https://so.toutiao.com/search?keyword=金价又新高囤金人却慌了)
@@ -59,7 +79,6 @@
 1. [岳婿双行长三代烟草人的问题出在哪](https://so.toutiao.com/search?keyword=岳婿双行长三代烟草人的问题出在哪)
 1. [小伙被义乌国际商贸城的物价震撼到](https://so.toutiao.com/search?keyword=小伙被义乌国际商贸城的物价震撼到)
 1. [房东拒退押金称是行规后续：已退款](https://so.toutiao.com/search?keyword=房东拒退押金称是行规后续：已退款)
-1. [女子称抱着骨灰盒时服务员来推销](https://so.toutiao.com/search?keyword=女子称抱着骨灰盒时服务员来推销)
 1. [妻子照顾瘫痪丈夫6年被泼水后回泼](https://so.toutiao.com/search?keyword=妻子照顾瘫痪丈夫6年被泼水后回泼)
 1. [台媒体验大陆高铁](https://so.toutiao.com/search?keyword=台媒体验大陆高铁)
 1. [牛犇：一生演小角色的大演员](https://so.toutiao.com/search?keyword=牛犇：一生演小角色的大演员)
@@ -72,20 +91,17 @@
 1. [小米汽车回应是否可以涉水](https://so.toutiao.com/search?keyword=小米汽车回应是否可以涉水)
 1. [范世錡张艺凡恋情疑曝光](https://so.toutiao.com/search?keyword=范世錡张艺凡恋情疑曝光)
 1. [智己刘涛回应李斌：固态电池非作秀](https://so.toutiao.com/search?keyword=智己刘涛回应李斌：固态电池非作秀)
-1. [网友：执法人员与村妇仅仅是冲突吗](https://so.toutiao.com/search?keyword=网友：执法人员与村妇仅仅是冲突吗)
 1. [马英九夜游“鸟巢”“冰丝带”](https://so.toutiao.com/search?keyword=马英九夜游“鸟巢”“冰丝带”)
 1. [广西一张707万元彩票没人领](https://so.toutiao.com/search?keyword=广西一张707万元彩票没人领)
 1. [拉夫罗夫和耶伦都在中国释放啥信号](https://so.toutiao.com/search?keyword=拉夫罗夫和耶伦都在中国释放啥信号)
 1. [女子国外旅游遇搭讪险些被抢手机](https://so.toutiao.com/search?keyword=女子国外旅游遇搭讪险些被抢手机)
 1. [到期后退房 房东列清单要求赔7千多](https://so.toutiao.com/search?keyword=到期后退房+房东列清单要求赔7千多)
 1. [虐猫考生未被录取是“舆论胜利”吗](https://so.toutiao.com/search?keyword=虐猫考生未被录取是“舆论胜利”吗)
-1. [飞天茅台批发价下探至2510元/瓶](https://so.toutiao.com/search?keyword=飞天茅台批发价下探至2510元/瓶)
 1. [日全食上演 美国民众欢呼尖叫](https://so.toutiao.com/search?keyword=日全食上演+美国民众欢呼尖叫)
 1. [北京大兴机场海关查获57瓶寄生虫](https://so.toutiao.com/search?keyword=北京大兴机场海关查获57瓶寄生虫)
 1. [日本家电在中国市场不吃香了吗](https://so.toutiao.com/search?keyword=日本家电在中国市场不吃香了吗)
 1. [中国女排世界联赛赛程公布](https://so.toutiao.com/search?keyword=中国女排世界联赛赛程公布)
 1. [专家：菲律宾找美国撑腰反被当棋子](https://so.toutiao.com/search?keyword=专家：菲律宾找美国撑腰反被当棋子)
-1. [中俄外长在京协调立场](https://so.toutiao.com/search?keyword=中俄外长在京协调立场)
 1. [以代表批联合国后被问是否考虑退出](https://so.toutiao.com/search?keyword=以代表批联合国后被问是否考虑退出)
 1. [大货车抢黄灯碾翻一电瓶车 疑致1死](https://so.toutiao.com/search?keyword=大货车抢黄灯碾翻一电瓶车+疑致1死)
 1. [王毅谈中俄关系的“五个始终”](https://so.toutiao.com/search?keyword=王毅谈中俄关系的“五个始终”)
@@ -114,9 +130,7 @@
 1. [专家：不建议购买黄金饰品投资](https://so.toutiao.com/search?keyword=专家：不建议购买黄金饰品投资)
 1. [初中生遇害案疑犯父母或涉嫌包庇罪](https://so.toutiao.com/search?keyword=初中生遇害案疑犯父母或涉嫌包庇罪)
 1. [台陆委会主委自认520后将去职](https://so.toutiao.com/search?keyword=台陆委会主委自认520后将去职)
-1. [12岁小学生800米跑出2分21秒](https://so.toutiao.com/search?keyword=12岁小学生800米跑出2分21秒)
 1. [C罗肘击染红后朝裁判举拳头](https://so.toutiao.com/search?keyword=C罗肘击染红后朝裁判举拳头)
-1. [浙江东阳现“提灯定损”：双方和解](https://so.toutiao.com/search?keyword=浙江东阳现“提灯定损”：双方和解)
 1. [北京市委书记尹力会见马英九一行](https://so.toutiao.com/search?keyword=北京市委书记尹力会见马英九一行)
 1. [美国管制对华半导体出口 韩媒诉苦](https://so.toutiao.com/search?keyword=美国管制对华半导体出口+韩媒诉苦)
 1. [胡锡进希望社会给虐猫考生其他通道](https://so.toutiao.com/search?keyword=胡锡进希望社会给虐猫考生其他通道)
